# awkward-arrow-cmake-pybind11

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  build-requirements.txt  build.sh  run_example.sh  test-python.py
.github/actions/: action.yml
.github/workflows/: ci.yml  docker.yml
src/: CMakeLists.txt
src/babel/: python.cpp
src/example/: python.cpp
